[package]
name = "proglog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
hyper = "0.14.27"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["base64"] }
tokio = { version = "1.33.0", features = ["full"] }
