[package]
name = "proglog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
prost = "0.12"
anyhow = "1.0.75"
axum = "0.6.20"
byteorder = "1.5.0"
hyper = "0.14.27"
memmap2 = "0.9.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["base64"] }
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.10"